--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     // Activa el componente
     document.querySelector('a-scene').setAttribute('liberar-modelo', '');
   </script>
-  <!-- Script para capturar pantalla visible -->
+  <!-- Script para capturar pantalla visible 
   <script>
     document.getElementById('boton-foto').addEventListener('click', () => {
       html2canvas(document.body, {
@@ -132,7 +132,7 @@
       });
     });
   </script>
-
+-->
 
   <!--sonido anchor 3-->
   <script>
@@ -149,4 +149,5 @@
 
 
 </html>
+
 
